roots/digitalocean/panoptica/aws_controller.tf
resource "aws_instance" "controller" {
  ami                         = data.aws_ami.debian-11.id
  subnet_id                   = aws_subnet.aa.id
  instance_type               = "t3.xlarge"
  associate_public_ip_address = true
  key_name                    = aws_key_pair.vchokshi.key_name
  tags = {
    Name = var.project_name
  }
  vpc_security_group_ids = [aws_security_group.SSH-SG.id]
}
resource "aws_route53_record" "controller" {
  zone_id = data.aws_route53_zone.public.id
  name    = "controller.aws.iot4.net"
  type    = "A"
  ttl     = "300"
  records = [aws_instance.controller.public_ip]
}

resource "aws_route53_record" "builder" {
  zone_id = data.aws_route53_zone.public.id
  name    = "builder.aws.iot4.net"
  type    = "A"
  ttl     = "300"
  records = [aws_instance.controller.public_ip]
}
output "aws_controller" {
  value = aws_instance.controller.public_ip
}
